y.output
Nonterminals useless in grammar

   stmt_list
   operation
   duration
   oper
   pin


Terminals unused in grammar

   CODE
   SPECIAL
   OPRTURN
   OPRSEND
   OPRON
   FOR


Rules useless in grammar

    7 stmt_list: stmt
    8          | %empty

    9 operation: OPRON


Rules useless in parser due to conflicts

    4 stmt: %empty


State 2 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: input $end

    1 input: function

    2 function: function stmt
    3         | %empty

    4 stmt: %empty
    5     | PORT location

    6 location: INTEGER


Terminals, with rules where they appear

$end (0) 0
error (256)
INTEGER (258) 6
CODE (259)
SPECIAL (260)
OPRTURN (261)
OPRSEND (262)
OPRON (263)
PORT (264) 5
FOR (265)


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
input (12)
    on left: 1, on right: 0
function (13)
    on left: 2 3, on right: 1 2
stmt (14)
    on left: 4 5, on right: 2
location (15)
    on left: 6, on right: 5


State 0

    0 $accept: . input $end

    $default  reduce using rule 3 (function)

    input     go to state 1
    function  go to state 2


State 1

    0 $accept: input . $end

    $end  shift, and go to state 3


State 2

    1 input: function .
    2 function: function . stmt

    PORT  shift, and go to state 4

    $end      reduce using rule 1 (input)
    $end      [reduce using rule 4 (stmt)]
    PORT      [reduce using rule 4 (stmt)]
    $default  reduce using rule 1 (input)

    stmt  go to state 5


State 3

    0 $accept: input $end .

    $default  accept


State 4

    5 stmt: PORT . location

    INTEGER  shift, and go to state 6

    location  go to state 7


State 5

    2 function: function stmt .

    $default  reduce using rule 2 (function)


State 6

    6 location: INTEGER .

    $default  reduce using rule 6 (location)


State 7

    5 stmt: PORT location .

    $default  reduce using rule 5 (stmt)
